styles/components/_tables.scss
/* ---------- TABLE ---------- */

.toChecked {
  border-right: 2px solid $warning;
}

p.toChecked {
  font-size: 0.8rem;
  margin: 1rem 0;
}

table {

  tbody {
    border: 2px solid $light;
    border-top: 0;
  }


  tr.fw-bold td {
    background-color: $bg-light;
  }

  .siren {
    width: 200px;
  }

  .company {
    width: 100px;
  }

  .form-control.success {
    border-color: lighten($success, 25%);
      background-color: lighten($success, 45%);
  }

  tr.warning td,
  .warning select {
    background-color: #fff3cd;
    border-color: $warning;
  }

  // --- Cell --- //

  td {

    // index
    &.sub {
      padding-left: 25px;
    }

    // font
    &.detail {
      font-style: italic;
      font-size: 15px;
    }
  }

  // --- Head --- //

  thead {
    background-color: $primary;

    tr th,
    tr td {
      color: #fff !important;
    }

    font-weight: 700;

    tr:nth-child(2),
    tr:nth-child(3) {
      background-color: lighten($primary, 5%);

      th,
      td {
        color: #fff !important;
      }
    }
  }

  .subth {
    background-color: darken($bg-light, 1%);
    border-bottom: 1px solid $light;
    font-weight: 600;
    font-size: 0.8rem;
  }

  // --- Body --- //
  tfoot {
    background-color: darken($bg-light, 2%);
    font-weight: bold;
  }

  tbody {
    td {
      vertical-align: middle;
    }

    // select
    select {
      width: 100%;
      background-color: white;
      border: solid 1px $primary;

      option {
        background-color: white;
        border: solid 1px $primary;
        border-radius: 0;
      }
    }

    // value
    .column_value {
      text-align: right;

      input {
        text-align: right;
      }
    }

    // uncertainty
    .column_uncertainty {
      text-align: center;
      font-size: 12px;

      input {
        text-align: right;
        font-size: 15px;
      }
    }

    // background valid/unvalid/default
    input,
    select {
      &.valid {
        background-color: $valid-color;
      }

      &.unvalid {
        background-color: $unvalid-color;
      }
    }

    option.default-option {
      background-color: wheat;
    }
  }
}

.table {
  font-size: 0.8rem;


}

.table-navigation {
  margin: 0 2px;
  padding: 5px 2px;
  display: flex;
  flex-direction: row;
  justify-content: space-between;

  button {
    min-width: 150px;
  }

  p {
    margin: 0;
  }
}

// MAIN AGGREGATE TABLE

.table-menu {
  margin: 2em 0 0.5rem 0;
  text-align: center;

  button {
    font-size: 0.9rem;
    background-color: $bg-light;
    font-weight: 600;
    border: none;
    padding: 1rem;
    color: $primary;
    border-top: 1px solid $light;
    border-bottom: 2px solid $light;
    cursor: pointer;
  }

  button:first-child {
    border-left: 1px solid $light;
    border-radius: 1rem 0 0 1rem;
  }

  button:last-child {
    border-right: 1px solid $light;
    border-radius: 0px 1rem 1rem 0;
  }

  button.active,
  button:hover,
  button:focus {
    background-color: $tertiary;
    color: #ffffff;
    border-color: $tertiary;
  }
}

.table-data {
  .fa-circle-info {
    color: $secondary;
  }

  .operating-result td {
    border-top: 1px solid $primary;
  }
}

.profit td {
  border-top: 1px solid $primary;
  border-bottom: 1px solid $primary;
}


.total,
.with-top-line {
  font-weight: 700;

  background-color: $light;
}

// TABLE Assesment

// Custom columns size
.division-column {
  width: 450px;
}

.area-column {
  width: 250px;
}

#mainAggregates,
#indicatorExpenses {
  .border-left {
    border-left: 2px solid darken($light, 1%);
  }
}

.comparative-table {
  .border-left {
    border-left: 2px solid lighten($light, 2%);
  }
}

// --- Immobilisations Table --- //

.immobilisationsTable {
  caption-side: top;

  caption {
    background-color: $primary;
    color: #fff;
    font-weight: 700;
    font-size: 1.1em;
    padding: 0.5rem 0.5rem;
  }

  thead {
    background-color: $light;
    font-weight: normal;
    border: 2px solid $light;

    th {
      color: $primary !important;
    }
  }
}

